syntax = "proto3";
option go_package = "./subscription_manager;pb_subscription_manager";

service SubscriptionManager {
  rpc CreateSubscriptionForPublisher (CreateSubscriptionForPublisherRequest) returns (Response);
}

message Response {
  bool is_success = 1;
}

message CreateSubscriptionForPublisherRequest {
  int32 user_id = 1;
  int32 plan_id = 2;
}
